Make it as responsive site

--- a/result.html
+++ b/result.html
@@ -39,7 +39,7 @@
 
         <div class="container-result">
             <h2 class="result-title"> </h2>
-            <h3 class="result-timeTaken">Time taken: 10 </h3>
+            <h3 class="result-timeTaken"> </h3>
             <h3 class="result-planet"> </h3>
         </div>
 
