New changes added

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class="underline"></div>
                     </div>
                     <figure>
-                        <img class="allPlanet" src="img/Planets/all_planets.png" alt="">
+                        <img class="allPlanet" src="img/Planets/all_planets.png" alt="Planets Images to be searched">
                         <!-- <figcaption>The planets Al Falcone might be hiding in & the space vehicles available at King Shan’s disposal
                         </figcaption>-->
                     </figure>
